# congresso-em-texto

./: Dockerfile  README.md  main.py  pyproject.toml
congresso_em_texto/: __init__.py  c2t.py
congresso_em_texto/collectors/: __init__.py  event.py  parliamentarian.py  speech.py
congresso_em_texto/preprocessing/: __init__.py  date.py  event.py  event_preprocessor.py  parlamentarian.py  parliamentarian.py  speech.py  speech_preprocessor.py  text.py  text_preprocessor.py
congresso_em_texto/utils/: __init__.py  data_manager.py
congresso_em_texto/utils/constants/: __init__.py  committees.py  patterns.py  selectors.py  settings.py  urls.py
src/congresso_em_texto/collectors/: __init__.py  event.py  parlamentarian.py  speech.py
