[tool.poetry]
name = "congresso_em_texto"
version = "0.1.0"
description = "Ferramental para extração de discursos oriundos do Congresso Nacional brasileiro."
license = "LGPL-3.0-or-later"
authors = ["Matheus Alves <matheusalves@copin.ufcg.edu.br>"]
maintaners = ["Victor Vinícius <victor.vinicius.araujo@ccc.ufcg.edu.br>"]
readme = "README.md"
repository = "https://github.com/beabaparlamentar/congresso-em-texto"
keywords = ["congresso-nacional", "parlamentares", "raspagem-de-dados"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
