[tool.poetry]
name = "congresso_em_texto"
version = "0.1.0"
description = "Ferramental para extração de discursos oriundos do Congresso Nacional brasileiro."
license = "LGPL-3.0-or-later"
authors = ["Matheus Alves <matheusalves@copin.ufcg.edu.br>"]
maintainers = ["Victor Vinícius <victor.vinicius.araujo@ccc.ufcg.edu.br>"]
repository = "https://github.com/beabaparlamentar/congresso-em-texto"
keywords = ["congresso-nacional", "parlamentares", "raspagem-de-dados"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
Scrapy = "^2.7.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
